[package]
name = "statmaster"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
statrs = "0.17.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
